--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
@@ -174,3 +174,7 @@
     BLConteudo.AdicionarJavaScript(Html.Action("ScriptImportar", new { model = Model }));
     BLConteudo.AdicionarJavaScript(Html.Action("ScriptImportarCarga", new { model = Model }));
 }
+
+@section head {
+    <link href="~/Content/css/plugins/dropzone/css/dropzone.min.css" rel="stylesheet" />
+}
