--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
@@ -11,6 +11,7 @@
 <script src="/Content/js/jquery.maskMoney.min.js"></script>
 <script src="@baseUrl/js/plugins/jquery.validate/jquery.validate.js"></script>
 <script src="@baseUrl/js/plugins/jquery.validate/additional-methods.min.js"></script>
+<script src="~/Content/js/plugins/dropzone/dropzone.min.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
