--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarSucesso.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarSucesso.cshtml
@@ -1,4 +1,4 @@
-﻿@model MLAgendamentoIntermodal
+﻿@model MLAgendamentoIntermodalImportacao
 
 <div class="box-agendamento box-agendamento--success sucessoJQ">
     <h2 class="success-title">@T("Envio efetuado com sucesso!")</h2>
