--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
@@ -191,7 +191,7 @@
         $("#valorNfe").maskMoney();
         $("#valorNfeVariosContainer").maskMoney();
         $("#divRegistrosCargas").hide();
-        //$(".sucessoJQ").hide();
+        $(".sucessoJQ").hide();
         //$(".btnAgendarJQ").hide();
         
     }
