--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
@@ -191,14 +191,14 @@
                 <p>Registro excluído com sucesso.</p>
             </div>
 
-            <div class="table-responsive">
+            <div class="table-responsive" id="divRegistrosImportarCargas">
                 <table class="table">
                     <tbody></tbody>
                 </table>
             </div>
 
             <div class="form-group text-center">
-                <a href="#" class="btn btn-red btn-lg btn-icon">
+                <a href="javascript:void(0)" class="btn btn-red btn-lg btn-icon btnAgendarImportarJQ">
                     <span class="icon icon-truck"></span>
                     Agendar Entrega
                 </a>
