--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
@@ -7,11 +7,16 @@
     var urlCep2 = "/json";
 }
 
+
+
+<script src="@baseUrl/js/jquery.min.js"></script>
 <script src="@baseUrl/js/plugins/jquery.mask/jquery.mask.min.js"></script>
 <script src="/Content/js/jquery.maskMoney.min.js"></script>
 <script src="@baseUrl/js/plugins/jquery.validate/jquery.validate.js"></script>
 <script src="@baseUrl/js/plugins/jquery.validate/additional-methods.min.js"></script>
-<script src="~/Content/js/plugins/dropzone/dropzone.min.js"></script>
+
+
+
 
 <script type="text/javascript">
     $(document).ready(function () {
@@ -111,7 +116,7 @@
                     }
                 },
                 error: function (data) {
-                    
+
                 }
             });
         }
@@ -174,7 +179,7 @@
                     }
                 },
                 error: function (data) {
-                    
+
                 }
             });
         }
@@ -193,7 +198,7 @@
         $("#divRegistrosCargas").hide();
         $(".sucessoJQ").hide();
         //$(".btnAgendarJQ").hide();
-        
+
     }
 
     // VALIDAR  O CAMPO PROPOSTA COMERCIAL
